--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="characters">Characters</string>
     <string name="locations">Locations</string>
     <string name="episodes">Episodes</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="name">Name</string>
+    <string name="dimension">Dimension</string>
+    <string name="type">Type</string>
+    <string name="episode">Episode</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
