--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,11 @@
     <string name="dimension">Dimension</string>
     <string name="type">Type</string>
     <string name="episode">Episode</string>
+    <string name="status">Status</string>
+    <string name="species">Species</string>
+    <string name="gender">Gender</string>
+    <string name="origin">Origin</string>
+    <string name="location">Location</string>
+    <string name="episodes_title">Episodes:</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
